--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.15",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
@@ -16,7 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.4",
     "lucide-react": "^0.451.0",
-    "next": "14.2.14",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
